list sprinttasks, projects, iterations

--- a/config/pally.sample.yml
+++ b/config/pally.sample.yml
@@ -2,4 +2,5 @@ login:
   base_url: https://rally1.rallydev.com/slm
   username: my user name
   password: my password
-  
+current_project: "Current Project Name"
+current_iteration: "Current Iteration Name"
